2008-07-11  Mark Wielaard  <mwielaard@redhat.com>

	* traceio.meta: s/decending/descending/ in description.
	* iotop.meta: Likewise.

2008-07-02  William Cohen  <wcohen@redhat.com>

	* functioncallcount.meta, functioncallcount.stp: New.

2008-07-02  William Cohen  <wcohen@redhat.com>

	* para-callgraph.stp, para-callgraph.meta: New.

2008-06-20  William Cohen  <wcohen@redhat.com>

	* traceio2.meta: Correct test_check and test_installcheck commands.
	
2008-06-20  William Cohen  <wcohen@redhat.com>

	* traceio2.stp, traceio2.meta: New.
	
2008-06-18  William Cohen  <wcohen@redhat.com>

	* sleepingBeauties.stp, sleepingBeauties.meta: New.

2008-06-17  William Cohen  <wcohen@redhat.com>

	* graphs.stp, graphs.meta: New.

2008-06-12  William Cohen  <wcohen@redhat.com>

	* thread-times.stp, thread-times.meta: New.

2008-05-20  William Cohen  <wcohen@redhat.com>

	* io_submit.stp, io_submit.meta:
	* traceio.stp, traceio.meta:
	* iotop.stp, iotop.meta:
	* disktop.stp, disktop.meta:
	* sigkill.stp, sigkill.meta: New.
	
2008-05-09  William Cohen  <wcohen@redhat.com>

	* syscalls_by_pid.meta, syscalls_by_proc.meta:
	* sigmon.meta, sig_by_pid.meta, sig_by_proc.meta:
	* socket-trace.meta: New.

2008-05-08  William Cohen  <wcohen@redhat.com>

	* iotime.meta: New.

2008-05-08  William Cohen  <wcohen@redhat.com>

	* sleeptime.meta, wait4time.meta: New.

2008-05-08  Mark Wielaard  <mwielaard@redhat.com>

	* futexes.meta (test_check,test_installcheck): Change futex.stp to
	futexes.stp.

2008-05-07  William Cohen  <wcohen@redhat.com>

	* futexes.meta, nettop.meta, pf2.meta: New.

2008-05-07  William Cohen  <wcohen@redhat.com>

	* pf2.stp: Clean up output.

2008-05-01  William Cohen  <wcohen@redhat.com>

	* helloworld.meta: New file.

2008-04-27  William Cohen  <wcohen@redhat.com>

	* check.exp: New script to run tests on cataloged examples.

2008-03-09  Wenji Huang  <wenji.huang@oracle.com>

	* wait4time.stp: Change reference of $pid to local variable pid. 
